Atualizei o Grelha_Novo

--- a/Grelha_Novo.ipynb
+++ b/Grelha_Novo.ipynb
@@ -60,8 +60,7 @@
     "                \n",
     "        if cen==b:\n",
     "            #Fazer esta merda\n",
-    "            \n",
-    "                \n",
+    "             \n",
     "        self.G=w\n",
     "        \n",
     "        \n",
@@ -73,7 +72,38 @@
     "        self.G[self.N-p[1]][self.N+p[0]]=None\n",
     "        \n",
     "    def livreQ(self,p):\n",
-    "        return self.G[self._cen-posicao[1]][self._cen+posicao[0]]==None"
+    "        return self.G[self._cen-posicao[1]][self._cen+posicao[0]]==None\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def Coord_estados(self):\n",
+    "        w=[[],[],[],[]]\n",
+    "        for i in self.G:\n",
+    "            for j in i:\n",
+    "                if j is not None and not isinstance(j,str):\n",
+    "                    if j._estado=='S':\n",
+    "                        w[0]=w[0]+[G.ID_to_pos(j._ID)]\n",
+    "                    if j._estado=='E':\n",
+    "                        w[1]=w[1]+[G.ID_to_pos(j._ID)]\n",
+    "                    if j._estado=='I':\n",
+    "                        w[2]=w[2]+[G.ID_to_pos(j._ID)]\n",
+    "                    if j._estado=='R':\n",
+    "                        w[3]=w[3]+[G.ID_to_pos(j._ID)]\n",
+    "        return Grelha.ptr(N,w)\n",
+    "    \n",
+    "    def coordenadasrecuperados(self):\n",
+    "        coordenadas=[]\n",
+    "        i=0\n",
+    "        while i<len(self._gre):\n",
+    "            j=0\n",
+    "            while j<len(self._gre):\n",
+    "                if self._gre[i][j]!=\"obstaculo\" and self._gre[i][j]!=None:\n",
+    "                    if self._gre[i][j].estado()==\"R\":\n",
+    "                        coordenadas=[j-self._cen,self._cen-i]\n",
+    "                j+=1\n",
+    "            i+=1\n",
+    "        return coordenadas"
    ]
   }
  ],
